# py-rust-tsp

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
notebook/: sample.ipynb
src/: lib.rs  main.rs  tsp_solver.rs
