[tool.poetry]
name = "py-rust-tsp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py_rust_tsp"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.19.4"
setuptools-rust = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
